force-app/main/default/objects/Operational_Task__c/Operational_Task__c.object-meta.xml
<CustomObject>
    <label>Operational Task</label>
    <nameField>
        <label>Operational Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operational Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>