force-app/main/default/objects/Operational_Task__c/fields/Account_CSE__c.field-meta.xml
<CustomField>
    <fullName>Account_CSE__c</fullName>
    <formula>Case__r.Account.CSE__r.FirstName&amp; &quot;,&quot; &amp;Case__r.Account.CSE__r.LastName</formula>
    <label>Account CSE</label>
    <type>Text</type>
</CustomField>