force-app/main/default/objects/Operational_Task__c/fields/Account_ILC_Car__c.field-meta.xml
<CustomField>
    <fullName>Account_ILC_Car__c</fullName>
    <formula>Case__r.Account.Sales_Car_Internal_ID__r.FirstName&amp; &quot;,&quot;&amp;Case__r.Account.Sales_Car_Internal_ID__r.LastName</formula>
    <label>Account ILC Car</label>
    <type>Text</type>
</CustomField>