force-app/main/default/objects/Operational_Task__c/fields/Age_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Hours__c</fullName>
    <formula>IF(
    Status__c = &quot;Completed&quot;,
   (Completion_Date__c - Start_Date__c) * 24,
   (NOW() - Start_Date__c) * 24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>