force-app/main/default/objects/Operational_Task__c/fields/Automatic_Task__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Task</label>
    <type>Checkbox</type>
</CustomField>