force-app/main/default/objects/Operational_Task__c/fields/Case_Contact__c.field-meta.xml
<CustomField>
    <fullName>Case_Contact__c</fullName>
    <formula>Case__r.ContactName__c</formula>
    <label>Case Contact</label>
    <type>Text</type>
</CustomField>