force-app/main/default/objects/Operational_Task__c/fields/Case_Contract_License_plate__c.field-meta.xml
<CustomField>
    <fullName>Case_Contract_License_plate__c</fullName>
    <formula>Case__r.Plate_No__c</formula>
    <label>Case Contract License plate</label>
    <type>Text</type>
</CustomField>