force-app/main/default/objects/Operational_Task__c/fields/Closed_by__c.field-meta.xml
<CustomField>
    <fullName>Closed_by__c</fullName>
    <label>Closed by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>