force-app/main/default/objects/Operational_Task__c/fields/DM_LOADID__c.field-meta.xml
<CustomField>
    <fullName>DM_LOADID__c</fullName>
    <externalId>true</externalId>
    <label>DM LOADID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>