force-app/main/default/objects/Operational_Task__c/fields/External_Case_Detail__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Detail__c</fullName>
    <formula>TEXT( Case__r.External_Case_Detail__c )</formula>
    <label>Case Detail</label>
    <type>Text</type>
</CustomField>