force-app/main/default/objects/Operational_Task__c/fields/Must_be_closed_before_case_can_be_closed__c.field-meta.xml
<CustomField>
    <fullName>Must_be_closed_before_case_can_be_closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Must be closed before case can be closed</label>
    <type>Checkbox</type>
</CustomField>