force-app/main/default/objects/Operational_Task__c/fields/Only_Available_For_Task_Owners__c.field-meta.xml
<CustomField>
    <fullName>Only_Available_For_Task_Owners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Available For Task Owners</label>
    <type>Checkbox</type>
</CustomField>