force-app/main/default/objects/Operational_Task__c/fields/Queues__c.field-meta.xml
<CustomField>
    <fullName>Queues__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Queues</label>
    <referenceTo>Queues__c</referenceTo>
    <relationshipLabel>Operational Tasks</relationshipLabel>
    <relationshipName>Operational_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>