force-app/main/default/objects/Operational_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( NOT( ISBLANK( Completion_Date__c ) ) , &quot;Completed&quot;, IF( NOW()&gt; Due_Date__c , &quot;Overdue&quot;, &quot;To do&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>