force-app/main/default/objects/Operational_Task__c/fields/Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Status_Icon__c</fullName>
    <formula>IF( NOT( ISBLANK( Completion_Date__c ) ) , &quot;✅&quot;, IF( NOW()&gt; Due_Date__c , &quot;🟥&quot;, &quot;🟨&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Icon</label>
    <type>Text</type>
</CustomField>