force-app/main/default/objects/Operational_Task__c/fields/Subsidiary_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Indicator__c</fullName>
    <label>Subsidiary Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>