force-app/main/default/objects/Operational_Task__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Name</label>
    <type>Text</type>
</CustomField>