force-app/main/default/objects/Operational_Task__c/fields/Task_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Task_Outcome__c</fullName>
    <label>Task Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>