force-app/main/default/objects/Operational_Task__c/fields/Task_SLA__c.field-meta.xml
<CustomField>
    <fullName>Task_SLA__c</fullName>
    <label>Task SLA (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>