force-app/main/default/objects/Operational_Task__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for user selection in the create manual task flow</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operational_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>