force-app/main/default/objects/Operational_Task__c/fields/Workflow_Task__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workflow Task</label>
    <referenceTo>Workflow_Task__c</referenceTo>
    <relationshipLabel>Operational Tasks</relationshipLabel>
    <relationshipName>Operational_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>