force-app/main/default/objects/Operational_Task__c/listViews/ALG_Assurances_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Assurances_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Assurances</label>
    <queue>ALG_Assurances</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>