force-app/main/default/objects/Operational_Task__c/listViews/ALG_Case_To_Assign_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Case_To_Assign_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Case To Assign</label>
    <queue>ALG_Case_To_Assign</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>