force-app/main/default/objects/Operational_Task__c/listViews/ALG_Facturation_recouvrement_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Facturation_recouvrement_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Facturation &amp; recouvrement</label>
    <queue>ALG_Facturation_recouvrement</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>