force-app/main/default/objects/Operational_Task__c/listViews/ALG_Finance_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Finance_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Finance</label>
    <queue>ALG_Finance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>