force-app/main/default/objects/Operational_Task__c/listViews/ALG_Inspecteurs_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Inspecteurs_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Inspecteurs technique</label>
    <queue>ALG_Inspecteurs</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>