force-app/main/default/objects/Operational_Task__c/listViews/ALG_Juridique_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Juridique_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Juridique</label>
    <queue>ALG_Juridique</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>