force-app/main/default/objects/Operational_Task__c/listViews/ALG_Logistique_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Logistique_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Logistique</label>
    <queue>ALG_Logistique</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>