force-app/main/default/objects/Operational_Task__c/listViews/ALG_Mobility_Center_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Mobility_Center_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Mobility Center</label>
    <queue>ALG_Mobility_Center</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>