force-app/main/default/objects/Operational_Task__c/listViews/ALG_Order_delivery_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Order_delivery_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Order &amp; delivery</label>
    <queue>ALG_Order_delivery</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>