force-app/main/default/objects/Operational_Task__c/listViews/ALG_Pricing_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Pricing_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Pricing</label>
    <queue>ALG_Pricing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>