force-app/main/default/objects/Operational_Task__c/listViews/ALG_Quality_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Quality_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Quality</label>
    <queue>ALG_Quality</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>