force-app/main/default/objects/Operational_Task__c/listViews/ALG_Reporting_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Reporting_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Reporting</label>
    <queue>ALG_Reporting</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>