force-app/main/default/objects/Operational_Task__c/listViews/ALG_Ressources_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Ressources_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Ressources</label>
    <queue>ALG_Ressources</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>