force-app/main/default/objects/Operational_Task__c/listViews/ALG_Sales_Operational_Task.listView-meta.xml
<ListView>
    <fullName>ALG_Sales_Operational_Task</fullName>
    <filterScope>Queue</filterScope>
    <label>ALG - Sales</label>
    <queue>ALG_Sales</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>